# G1_RL_FootstepTracking

./: .gitignore  LICENSE  LSTM_run.py  NOTICE  README.md  cloudpoint_groud.py  cloudpoint_ramp.py  cloudpoint_step.py  cloudpoint_terrain.py  env_log  env_log.txt  f_test.py  ff_test.py  generate_model.py  his_run.py  his_test.py  long.py  planner.py  pointcloud_final.ply  pose.py  pyproject.toml  ramp_hfield.py  readme.md  robotwalker.txt  run.py  run_2.py  terrain_hfield.py  test.py  test1.py  test2.py  train.py  train_1.py  train_2.py  train_3.py  train_4.py
asset/: mirrorwrapper.py  print_model_indices.py  scene_with_robot.xml  static.py
checkpoints/: ppo_g1_vecnormalize_1200000_steps.pkl  ppo_g1_vecnormalize_1600000_steps.pkl  ppo_g1_vecnormalize_2400000_steps.pkl  ppo_g1_vecnormalize_3600000_steps.pkl  ppo_g1_vecnormalize_4800000_steps.pkl  ppo_g1_vecnormalize_6000000_steps.pkl  ppo_g1_vecnormalize_6144000_steps.pkl  ppo_g1_vecnormalize_6528000_steps.pkl  ppo_g1_vecnormalize_6912000_steps.pkl  ppo_g1_vecnormalize_7200000_steps.pkl  ppo_g1_vecnormalize_7296000_steps.pkl  ppo_g1_vecnormalize_7680000_steps.pkl  ppo_g1_vecnormalize_8400000_steps.pkl  vec_0125.pkl  vec_1.pkl  vec_10.pkl  vec_11.pkl  vec_12.pkl  vec_2.pkl  vec_3.pkl  vec_4.pkl  vec_5.pkl  vec_6.pkl  vec_7.pkl  vec_8.pkl  vec_9.pkl  vec_base.pkl  vec_base2.pkl  vec_best.pkl  vec_lr2.pkl  vec_lr3.pkl  vec_lr4.pkl  vec_lr5.pkl  vec_model.pkl  vec_normalize_final.pkl  vec_s30.pkl  vec_s40.pkl  vec_s50.pkl  vec_w010.pkl  vec_w015.pkl  (+1 more)
env/: LHW_env.py  LHW_position_env.py  g1_anti_env.py  g1_anti_vec_env.py  g1_base.py  g1_base1.py  g1_base2.py  g1_env.py  g1_terrain_env.py  g1_test.py  g1_test1.py  g1_test2.py  g1_test3.py  g1_test_waist.py  mirrorwrapper.py  old.py  position_env.py  position_env1.py  print_env.py  test_env.py  test_env1.py  test_env2.py
env_utils/: mirrorwrapper.py  reward_functions.py
f_env/: g1_terrain_env.py
f_scripts.py/: compute_max_step.py  nominal_pelvis_height.py  test_pose.py
g_env/: g1_base.py  g1_base2.py  g1_base3.py  g1_store.py  g1_test.py  g1_test2.py  mirrorwrapper1.py
planner_pipeline/: footstep_planner.py  reward_functions.py  (+2 more)
(+126 files in other folders)
